# pytest-framework

./: .dockerignore  .gitignore  Dockerfile  JenkinsFile  Jenkinsfile  README.md  main.py  pyproject.toml
framework/client/: http_client.py
framework/config/: settings.py
framework/utils/: logger.py
tests/: conftest.py  test_auth_flows.py  test_carts.py  test_files.py  test_product.py
